--- a/.github/workflows/activity-box.yml
+++ b/.github/workflows/activity-box.yml
@@ -14,5 +14,5 @@ jobs:
         env:
           GH_PAT: ${{ secrets.GH_PAT }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GH_USERNAME: JasonEtco
-          GIST_ID: 68c3458672047ec25e61a8af730181c3
+          GH_USERNAME: ardakazanci
+          GIST_ID: 620a025fee39ed9e8d065a96268cd5c1
